# symcc

./: .gitignore  CMakeLists.txt  README.md  shell.nix
AFL22Input/: OriginalPathCondition.txt  Pertubation1.txt  Pertubation2.txt  Pertubation3.txt  Perturbation1.txt  Perturbation3.txt  TestingProgram.c  readMe.md
compiler/: sym++.in  symcc.in
examples/: test.c
runtime/: CMakeLists.txt
runtime/tracing_backend/: Runtime.cpp
test/: file_input.c  file_input.test32
util/: pure_concolic_execution.sh
